--- a/templates/input_points.html
+++ b/templates/input_points.html
@@ -15,7 +15,7 @@
                             </div>
                         </div>
                     </div>
-                    <input class="form-control" id="{{ loop.index0 }}" type="text" value="{{ point['name'] }}" onchange="search({{ loop.index0 }})" onkeypress="searchpress(event, this)" />
+                    <input class="form-control" id="{{ loop.index0 }}" type="text" value="{{ point['name'] }}" onchange="search({{ loop.index0 }})" oninput="changed({{ loop.index0 }})" onkeypress="searchpress(event, this)" />
                     <div id="control{{ loop.index0 }}" class="input-group-append">
                         {% if loop.index0 != 0 %}
                             <button class="btn btn btn-outline-danger p-btn" type="button" onclick="deletePoint({{ loop.index0 }})" tabindex="-1"><i class="fas fa-minus"></i></button>
@@ -24,7 +24,7 @@
                         <button class="btn btn btn-outline-primary p-btn d-none d-sm-block" type="button" onclick="search({{ loop.index0 }})" tabindex="-1"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
-                <small class="form-text text-muted text-monospace" id="geo{{ loop.index0 }}"></small>
+                <small class="form-text text-monospace" id="geo{{ loop.index0 }}"></small>
                 <input type="hidden" id="geo_{{ loop.index0 }}" name="point{{ loop.index0 }}" value="{{ point['geolocation'] }}" />
             </div>
         {% endfor %}
@@ -70,14 +70,14 @@
                                 '</div>' +
                             '</div>' +
                         '</div>' +
-                        '<input class="form-control" id="'+numberOfPoints+'" type="text" onchange="search('+numberOfPoints+')" onkeypress="searchpress(event, this)" />' +
+                        '<input class="form-control" id="'+numberOfPoints+'" type="text" onchange="search('+numberOfPoints+')" oninput="changed('+numberOfPoints+')" onkeypress="searchpress(event, this)" />' +
                         '<div id="control'+numberOfPoints+'" class="input-group-append">' +
                             '<button class="btn btn btn-outline-danger p-btn" type="button" onclick="deletePoint('+numberOfPoints+')" tabindex="-1"><i class="fas fa-minus"></i></button>' +
                             '<button class="btn btn btn-outline-success p-btn" type="button" onclick="insertPointAfter('+numberOfPoints+')" tabindex="-1"><i class="fas fa-plus"></i></button>' +
                             '<button class="btn btn btn-outline-primary p-btn d-none d-sm-block" type="button" onclick="search('+numberOfPoints+')" tabindex="-1"><i class="fas fa-search"></i></button>' +
                         '</div>' +
                     '</div>' +
-                    '<small class="form-text text-muted" id="geo'+numberOfPoints+'"></small>' +
+                    '<small class="form-text text-monospace" id="geo'+numberOfPoints+'"></small>' +
                     '<input type="hidden" id="geo_'+numberOfPoints+'" name="point'+numberOfPoints+'" value="" />' +
                 '</div>';
             $(newPoint).insertAfter("#point"+pointId);
@@ -87,6 +87,11 @@
 
         function search(id) {
             if ($("#"+id).val()){
+                let nochange = $("#"+id).prop("nochange");
+                if (nochange){
+                    $("#"+id).prop("nochange", false);
+                    return;
+                }
                 $(':input[type="submit"]').prop('disabled', true);
                 $("#control"+id).hide();
                 $("#icon"+id).hide();
@@ -95,12 +100,17 @@
                         url: "/api/search/"+$("#"+id).val()
                     }).done(function(data) {
                         $("#"+id).val(data["address"]);
-                        $("#geo"+id).text("GEOLOCATION: "+data["lat"]+' '+data["lon"]);
+                        $("#geo"+id).removeClass("text-danger")
+                            .addClass("text-secondary")
+                            .text("GEOLOCATION: "+data["lat"]+' '+data["lon"]);
                         $("#geo_"+id).val(data["lat"]+' '+data["lon"]);
                     }).fail(function () {
-                        $("#geo"+id).html("UNDEFINED GEOLOCATION<br>ONLY DC IS SUPPORTED NOW");
+                        $("#geo"+id).removeClass("text-secondary")
+                            .addClass("text-danger")
+                            .html("UNDEFINED LOCATION<br>ONLY DC IS SUPPORTED NOW");
                         $("#geo_"+id).val("");
                     }).always(function () {
+                        $("#"+id).prop("nochange", true);
                         $("#spinner"+id).attr("hidden", "");
                         $("#icon"+id).show();
                         $("#control"+id).show();
@@ -114,6 +124,10 @@
                 event.preventDefault();
                 search(t.id);
             }
+        }
+
+        function changed(id) {
+            $("#"+id).prop("nochange", false);
         }
     </script>
 
