--- a/templates/input_points.html
+++ b/templates/input_points.html
@@ -18,10 +18,10 @@
                     <input class="form-control" id="{{ loop.index0 }}" type="text" value="{{ point['name'] }}" onchange="search({{ loop.index0 }})" oninput="changed({{ loop.index0 }})" onkeypress="searchpress(event, this)" />
                     <div id="control{{ loop.index0 }}" class="input-group-append">
                         {% if loop.index0 != 0 %}
-                            <button class="btn btn btn-outline-danger p-btn" type="button" onclick="deletePoint({{ loop.index0 }})" tabindex="-1"><i class="fas fa-minus"></i></button>
+                            <button class="btn btn-outline-danger p-btn" type="button" onclick="deletePoint({{ loop.index0 }})" tabindex="-1"><i class="fas fa-minus"></i></button>
                         {% endif %}
-                        <button class="btn btn btn-outline-success p-btn" type="button" onclick="insertPointAfter({{ loop.index0 }})" tabindex="-1"><i class="fas fa-plus"></i></button>
-                        <button class="btn btn btn-outline-primary p-btn d-none d-sm-block" type="button" onclick="search({{ loop.index0 }})" tabindex="-1"><i class="fas fa-search"></i></button>
+                        <button class="btn btn-outline-success p-btn" type="button" onclick="insertPointAfter({{ loop.index0 }})" tabindex="-1"><i class="fas fa-plus"></i></button>
+                        <button class="btn btn-outline-primary p-btn d-none d-sm-block" type="button" onclick="search({{ loop.index0 }})" tabindex="-1"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
                 <small class="form-text text-monospace" id="geo{{ loop.index0 }}"></small>
