MD and VA added

--- a/templates/input_points.html
+++ b/templates/input_points.html
@@ -106,7 +106,7 @@
                     }).fail(function () {
                         $("#geo"+id).removeClass("text-secondary")
                             .addClass("text-danger")
-                            .html("UNDEFINED LOCATION<br>ONLY DC IS SUPPORTED NOW");
+                            .html("UNDEFINED LOCATION<br>ONLY DC-MD-VA SUPPORTED");
                         $("#geo_"+id).val("");
                     }).always(function () {
                         $("#"+id).prop("nochange", true);
